这样总是报错

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>涟漪效果</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <script type="text/javascript" src="../dist/touch-ripple.js"></script>
+    <script type="text/javascript" src="../dist/simulated-ripple.js"></script>
 
     <style>
       html, body {
@@ -41,18 +41,10 @@
       }
 
       .demo-box {
-        width: 100%;
-        height: auto;
-        text-align: center;
-      }
-      .demo-btn {
-        display: inline-block;
-        margin: 20px auto;
-        background: green;
-        padding: 25px 80px;
-        color: #fff;
-        border-radius: 4px;
-        cursor: pointer;
+        margin: 50px auto;
+        width: 300px;
+        height: 300px;
+        background: red;
       }
     </style>
   </head>
@@ -61,14 +53,14 @@
       <header class="header">
         <h1>touch-ripple 触摸涟漪反馈效果</h1>
         <div class="addr">
-          <span>说明文档: </span><a id="addr" href="">https://github.com/qgh810/touch-ripple</a>
+          <span>说明文档: </span><a id="addr" href="">https://github.com/qgh810/simulated-ripple</a>
         </div>
       </header>
 
 
       <div class="demo-box">
-        <div class="demo-btn">
-          <span>Click for Ripple</span>
+        <div class="demo">
+          123
         </div>
       </div>
 
@@ -77,16 +69,12 @@
   </body>
   <script>
     window.onload = function () {
-      new TouchRipple('.demo-btn', {
-        color: 'rgba(0,0,0,0.3)',
-        time: 500,
-        size: null
-      })
+      new SimulatedRipple('.demo')
 
       var addrBtn = document.getElementById('addr')
       addrBtn.addEventListener('click', function (e) {
         e.preventDefault()
-        window.open('https://github.com/qgh810/touch-ripple')
+        window.open('https://github.com/qgh810/simulated-ripple')
       }, false)
 
     }
