--- a/demo/index.html
+++ b/demo/index.html
@@ -40,11 +40,11 @@
         font-size: 20px;
       }
 
-      .demo-box {
+      .demo {
         margin: 50px auto;
         width: 300px;
         height: 300px;
-        background: red;
+        background: url('https://avatars0.githubusercontent.com/u/16077715?v=3&s=460');
       }
     </style>
   </head>
