--- a/demo/index.html
+++ b/demo/index.html
@@ -44,7 +44,18 @@
         margin: 50px auto;
         width: 300px;
         height: 300px;
-        background: url('https://avatars0.githubusercontent.com/u/16077715?v=3&s=460');
+        background: url('https://avatars0.githubusercontent.com/u/16077715?v=3&s=460') center / 100% auto;
+        cursor: pointer;
+      }
+      
+      .demo-btn {
+        margin: 40px auto;
+        width: 200px;
+        text-align: center;
+        border: 1px solid green;
+        color: green;
+        padding: 10px 30px;
+        cursor: pointer;
       }
     </style>
   </head>
@@ -60,7 +71,10 @@
 
       <div class="demo-box">
         <div class="demo">
-          123
+        </div>
+
+        <div class="demo-btn">
+          <span>点击上面图片涟漪</span>
         </div>
       </div>
 
@@ -70,6 +84,10 @@
   <script>
     window.onload = function () {
       new SimulatedRipple('.demo')
+
+      new SimulatedRipple('.demo-btn', {
+        hideSelf: true,
+      })
 
       var addrBtn = document.getElementById('addr')
       addrBtn.addEventListener('click', function (e) {
