--- a/demo/index.html
+++ b/demo/index.html
@@ -44,7 +44,7 @@
         margin: 50px auto;
         width: 300px;
         height: 300px;
-        background: url('https://avatars0.githubusercontent.com/u/16077715?v=3&s=460') center / 100% auto;
+        background: url('https://coding.net/u/qiuguohui/p/qiuguohui.coding.me/git/raw/master/demo/simulited-ripple/assets/header-image.jpeg') center / 100% auto;
         cursor: pointer;
       }
       
@@ -62,7 +62,7 @@
   <body>
     <div class="app-root">
       <header class="header">
-        <h1>touch-ripple 触摸涟漪反馈效果</h1>
+        <h1>simulited-ripple 触摸涟漪反馈效果</h1>
         <div class="addr">
           <span>说明文档: </span><a id="addr" href="">https://github.com/qgh810/simulated-ripple</a>
         </div>
